# luluNAV

./: CMakeLists.txt  Readme.md
config/: Readme.md  insEXconfig.txt  insSIMconfig.txt  insSIMconfigB.txt  insconfig.txt
data/SIM/: tcINSSIMLog_1807_I.txt  tcVBINSSIMLog_1807_I.txt
data/tightcouple/: error_1807.txt  gnssRAW_1807_I.txt  time.txt
driver/: CMakeLists.txt
driver/inc/: serial.hpp
driver/src/: serial.cpp
inc/: main.hpp  sensors.hpp  sensorsMsg.hpp  tightcouple.h
matlab/: EXNAVDATA_1031_1807_I.mat  EXNAVDATA_1031_1807_I_SPP.mat  EX_of_MineBIVBTCNavEKF21.m  EX_of_MineTCChiNavEKF21.m  EX_of_MineTCNavEKF21.m  Readme.md
matlab/PrincipleVerifyByROTModel/: Readme.md  akfupdate.m  akfupdate_comp.m  new_aprivbkf.m  new_aprivbkf_comp.m  prior_parameter_select.m  ssmkf.m  ssmkf_comp.m  swrkf.m  swrkf_comp.m  test_ln_BIGVBKFSEQ_COMP_DMN_4d.m  test_ln_VBEKFSEQ_DMN_4d.m  test_radar_BIGVBSEQ_COMP_DMN_5d.m  test_radar_VBSEQ_CHI_DMN_5d.m
matlab/ResComp/: BiasFixed.mat  BiasSPANFixed.mat  COMP21.m  COMPTime.m  COMP_Satllite.m  EX_AHRS_1031_175203.mat  LCCKF_1807_I.mat  LCCKFtime1807I_R.mat  RSTEKFandMCEKFtime1807.mat  RSTandMC_TC21_1807_I.mat  SPANTRJ_1031_1750.mat  TC21CHI_1807_I.mat  TC21Norm_1807_I.mat  TCCHItime1807I_R.mat  TCNormtime1807I.mat  TCNormtime1807I_R.mat  VB21seq_1807_I.mat  VBNormTCtime1807I_R.mat  VBNormTCtime1807I_detail_R.mat  VBTCtime1807I.mat  VBTCtime1807I_R.mat  VBTCtime1807I_detail_R.mat  VBTCtime_1807_I.txt
matlab/tightlyCoupleNavigation/: EX_of_MineBIVBTCNavEKF21.m  EX_of_MineBIVBTCNavEKF21Norm.m  EX_of_MineTCChiNavEKF21.m  EX_of_MineTCNavEKF21.m  EX_of_RSTEKFandMCEKF21.m
modules/Component/: CMakeLists.txt
modules/Component/inc/: RingBuffer.hpp  RingBuffer.tpp
modules/INSCore/: CMakeLists.txt
modules/INSCore/inc/: BASEElement.h  ins.h  insTC.h
modules/INSCore/src/: BASEElement.cpp  insTC.cpp
modules/ParseGNSS/: CMakeLists.txt
modules/ParseGNSS/inc/: GNSS.hpp  GNSSMsg.hpp
modules/ParseGNSS/src/: GNSS.cpp
modules/ParseIMU/: CMakeLists.txt
modules/ParseIMU/inc/: IMU.hpp
modules/ParseIMU/src/: IMU.cpp
platform/: CMakeLists.txt
platform/inc/: Manager.hpp  Publisher.hpp  Subscriber.hpp
platform/src/: Manager.cpp  Publisher.cpp  Subscriber.cpp
src/: main.cpp  sensors.cpp  tightcouple.cpp
